--- a/.github/workflows/publish_game.yml
+++ b/.github/workflows/publish_game.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Download html
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          file: 
+          file: HTML.zip
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: release windows
@@ -19,14 +19,14 @@ jobs:
           CHANNEL: html5
           ITCH_GAME: Breakout
           ITCH_USER: Samich
-          PACKAGE: html.zip
+          PACKAGE: HTML.zip
   release_mac:
     runs-on: ubuntu-latest
     steps:
       - name: Download mac
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          file: Breakout.dmg
+          file: Mac.zip
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: release windows
@@ -36,14 +36,14 @@ jobs:
           CHANNEL: mac
           ITCH_GAME: Breakout
           ITCH_USER: Samich
-          PACKAGE: Breakout.dmg
+          PACKAGE: Mac.zip
   release_windows:
     runs-on: ubuntu-latest
     steps:
       - name: Download windows
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          file: Breakout.exe
+          file: Windows.zip
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: release windows
@@ -53,4 +53,4 @@ jobs:
           CHANNEL: windows
           ITCH_GAME: Breakout
           ITCH_USER: Samich
-          PACKAGE: Breakout.exe
+          PACKAGE: Windows.zip
