idk try to update the export for mac

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -27,7 +27,7 @@ display/high_res=false
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
 codesign/enable=true
-codesign/identity=""
+codesign/identity="Breakout"
 codesign/timestamp=true
 codesign/hardened_runtime=true
 codesign/replace_existing_signature=true
