--- a/.github/workflows/publish_game.yml
+++ b/.github/workflows/publish_game.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Download mac
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          file: Mac.dmg
+          file: Mac.zip
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: Release Mac
